--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ A2A_PORT_ASSISTANT=10002
 # MCP Server URLs
 MCP_SERVER_URL=http://localhost:8080/mcp
 ANALYTICS_MCP_SERVER_URL=http://localhost:8081/mcp
+EXECUTOR_MCP_SERVER_URL=http://localhost:8082/mcp
 
 # Inter-agent Communication URLs
 POKEMON_AGENT_URL=http://localhost:10001
