envio de correos

--- a/.env
+++ b/.env
@@ -12,6 +12,14 @@ MCP_SERVER_URL=http://localhost:8080/mcp
 ANALYTICS_MCP_SERVER_URL=http://localhost:8081/mcp
 EXECUTOR_MCP_SERVER_URL=http://localhost:8082/mcp
 
+# Email Alert Configuration
+ALERT_EMAIL_FROM=98alejag@gmail.com
+ALERT_EMAIL_PASSWORD=wuox mxrb iojc oprx
+ALERT_EMAIL_RECIPIENTS=98alejag@gmail.com
+ALERT_SMTP_SERVER=smtp.gmail.com
+ALERT_SMTP_PORT=587
+ALERT_USE_TLS=true
+
 # Inter-agent Communication URLs
 POKEMON_AGENT_URL=http://localhost:10001
 ASSISTANT_AGENT_URL=http://localhost:10002
